@@ -5,6 +5,9 @@ x2goclient (4.0.2.0-0x2go1) UNRELEASED; urgency=low
     - Revrite SSH Classes to support libssh fix.
     - Add Class HelpDialog to show options in scroll area. 
     - Fix authentication on SSH Broker with key + passphrase.
+    - Set modmap timer timeout to 10 sec on Mac.
+    - Fix running xmodmap if X2Go Client not started from terminal.
+    - Setting keyboard modifiers with xmodmap.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Jan 2014 09:20:08 +0100
 
